--- a/sql_and_config_backup/old/apache2.conf
+++ b/sql_and_config_backup/old/apache2.conf
@@ -89,7 +89,7 @@ PidFile ${APACHE_PID_FILE}
 #
 # Timeout: The number of seconds before receives and sends time out.
 #
-Timeout 60
+Timeout 300
 
 #
 # KeepAlive: Whether or not to allow persistent connections (more than
@@ -102,7 +102,7 @@ KeepAlive On
 # during a persistent connection. Set to 0 to allow an unlimited amount.
 # We recommend you leave this number high, for maximum performance.
 #
-MaxKeepAliveRequests 50
+MaxKeepAliveRequests 100
 
 #
 # KeepAliveTimeout: Number of seconds to wait for the next request from the
@@ -110,9 +110,6 @@ MaxKeepAliveRequests 50
 #
 KeepAliveTimeout 5
 
-# Begrenser hvor mange headere hver request kan ha 
-#
-#LimitRequestFields 40
 
 # These need to be set in /etc/apache2/envvars
 User ${APACHE_RUN_USER}
@@ -152,6 +149,7 @@ IncludeOptional mods-enabled/*.conf
 # Include list of ports to listen on
 Include ports.conf
 
+
 # Sets the default security model of the Apache2 HTTPD server. It does
 # not allow access to the root filesystem outside of /usr/share and /var/www.
 # The former is used by web applications packaged in Debian,
@@ -168,17 +166,11 @@ Include ports.conf
 	AllowOverride None
 	Require all granted
 </Directory>
-#<Directory /var/www>
-#   Options -Indexes
-#   AllowOverride All
-#   Order allow,deny
-#   Allow from all
-# </Directory>
+
 <Directory /var/www/>
+	Options Indexes FollowSymLinks
 	AllowOverride ALL
 	Require all granted
-	Options -Indexes
-	Options -Includes -ExecCGI
 </Directory>
 
 #<Directory /srv/>
@@ -233,38 +225,4 @@ IncludeOptional conf-enabled/*.conf
 IncludeOptional sites-enabled/*.conf
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
-
-# Alt under her er lagt til av gruppa:
-
-# Fjerner responsheadere og unngår at server røper for mye
-# informasjon om seg selv
-ServerTokens Prod
-ServerSignature Off
-
-# ID for innhold, kan avsløre litt om interne ressursID-er,
-# skrues av
-FileETag None
-
-# Forhindrer Cross Site Tracing attack
-TraceEnable off
-
-# Fjerner referer slik at neste side ikke vet hvor bruker kommer fra
-# same-origin kan brukes hvis referer trengs
-Header set Referrer-Policy: no-referrer
-#Header set Referrer-Header: same-origin 
-
-# HTTPOnly for Cookies
-Header edit Set-Cookie ^(.*)$ $1;HttpOnly;
-# X-Frame-Options mot Clickjacking
-Header always set X-Frame-Options "SAMEORIGIN"
-
-# Tving nettleser til å ha XSS-protection
-Header set X-XSS-Protection "1; mode=block"
-
-# Tving nettleser til å ha CSRF-protection
-Header always set X-CSRF-Protection "1; mode=block"
-
-# Brukes for å unngå MIME-sniffing
-Header set X-content-type-options "nosniff"
-
 
